# cargo-chec

./: .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md
benchmark_results/: benchmark_report_2026-01-19_03-20-30.txt  benchmark_tes_report_2026-01-19_16-05-48.txt
scripts/: benchmark.sh  benchmark_carpulin.sh  benchmark_chec.sh  benchmark_tes.sh  clippy.sh  fmt_check.sh  publish.sh  publish_dry_run.sh  test.sh
src/: main.rs
tes/: Cargo.toml  README.md
tes/src/: main.rs
test/: Cargo.toml
test/src/: lib.rs  tests.rs
tools/broken-tests/src/: tests.rs
tools/build-fail/: Cargo.toml  build.rs
tools/build-fail/src/: lib.rs
tools/coverage-test/: Cargo.toml
tools/coverage-test/fixtures/: llvm-cov.json  tarpaulin.json
tools/coverage-test/src/: lib.rs
tools/demo-outputs/: Cargo.toml
tools/demo-outputs/tests/: capture_tests.rs
wrappers/carpulin/: Cargo.toml  README.md
wrappers/carpulin/src/: main.rs
wrappers/chec/: Cargo.toml  README.md
wrappers/chec/src/: main.rs
wrappers/tes/: Cargo.toml  README.md
wrappers/tes/src/: main.rs
wrappers/tes/tests/: build_failure.rs
