[package]
name = "cargo-chec"
version = "0.1.0"
edition = "2021"
description = "A cargo subcommand to run cargo check and output filtered error messages as a JSON array"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
keywords = ["cargo", "subcommand", "rust", "errors", "check"]
categories = ["development-tools", "command-line-utilities"]
repository = "https://github.com/youruser/cargo-checkmate"

[dependencies]
cw-jsonfilter = { git = "https://github.com/DA0-DA0/dao-contracts.git", package = "cw-jsonfilter", branch = "development" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
