[workspace]
members = [".", "tes", "test"]

[package]
name = "cargo-chec"
version = "0.1.7"
edition = "2021"
description = "A cargo subcommand to run cargo check and output filtered error messages as a JSON array"
authors = ["hardnett <loaf0bred@proton.me>"]
license = "MIT OR Apache-2.0"
keywords = ["cargo", "subcommand", "rust", "errors", "check"]
categories = ["development-tools", "command-line-utilities"]
repository = "https://github.com/permissionlessweb/cargo-chec"
exclude = ["tes/", "test/", "scripts/", "benchmark_results/", ".vscode/", "target/", "Justfile", "*.log", ".cache/"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
