[workspace]
members = [
    "wrappers/chec",
    "wrappers/tes",
    "wrappers/carpulin",
    "tools/demo-outputs",
    "tools/coverage-test",
]
exclude = [
    "tools/broken-tests",
]
resolver = "2"

[workspace.package]
authors = ["hardnett <loaf0bred@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/permissionlessweb/cargo-chec"
edition = "2021"
